# scheduling_fucho_games

./: README.md  pyproject.toml
scheduling_fucho_games/: README.md  __init__.py  __main__.py  main.py  model.py  pyproject.toml  utils.py  yml_loader.py
scheduling_fucho_games/algorithms/: __init__.py  cpsat.py  genetic_algorithm.py  kempe.py
scheduling_fucho_games/assets/: example_input.yml  example_input_knockout.yml  example_input_knockout_brackets.yml  example_input_odd.yml  example_output.yml  example_output_genetic.yml  example_output_kempe.yml  example_output_knockout.yml  example_output_knockout_brackets.yml  example_output_odd.yml
scheduling_fucho_games/tests/: __init__.py  conftest.py  test_loader.py  test_solvers.py
scheduling_fucho_games/tests/assets/: non_canonical.yml  non_feasible_1.yml  odd_team.yml
